# pingress-controller

./: .dockerignore  .gitignore  README.md
controller/: Cargo.toml
controller/manifests/: hostport.yaml  ingress-class.yaml  pingress-controller.yaml
controller/manifests/sample/: sample.yaml
controller/src/: main.rs
controller/src/controller/: host_port.rs  mod.rs  node_port.rs
controller/src/controller/host_port/: config_map.rs  daemonset.rs  ingresses.rs  mod.rs  reconcile.rs  secrets.rs
controller/src/controller/load_balancer/: mod.rs  reconcile.rs
controller/src/controller/node_port/: config_map.rs  daemonset.rs  ingresses.rs  reconcile.rs  secrets.rs
dockerfiles/: controller.Dockerfile  server.Dockerfile
pingress-config/: Cargo.toml
pingress-config/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: http_proxy.rs  main.rs  proxy_map.rs  tls.rs  watcher.rs
