[package]
name = "pingress-proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pingress-config = { path = "../pingress-config" }

# pingora
pingora = { version = "0.3.0", features = ["proxy"] }

# serde
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

# command line
clap = { version = "4.5.16", features = ["derive"] }

# logs
log = "0.4.22"
env_logger = "0.11.5"

# async
async-trait = "0.1.81"
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"

# misc
regex = "1.10.6"

# reload
notify = "6.1.1"
nix = { version = "0.29.0", features = ["signal"] }
